--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-CN">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧮</text></svg>" />
@@ -9,5 +9,33 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script>
+			// 在开发模式下抑制某些已知的无害警告
+			if (typeof window !== 'undefined' && window.location.hostname === 'localhost') {
+				const originalWarn = console.warn;
+				const originalError = console.error;
+
+				console.warn = function(...args) {
+					const message = args.join(' ');
+					// 过滤掉已知的无害警告
+					if (message.includes('unknown prop') ||
+						message.includes('Package of #<Object>') ||
+						message.includes('was created with unknown prop')) {
+						return;
+					}
+					originalWarn.apply(console, args);
+				};
+
+				console.error = function(...args) {
+					const message = args.join(' ');
+					// 过滤掉已知的MathJax相关错误
+					if (message.includes('Cannot set property Package of #<Object>') ||
+						message.includes('Package of #<Object> which has only a getter')) {
+						return;
+					}
+					originalError.apply(console, args);
+				};
+			}
+		</script>
 	</body>
 </html>
